update navbar and jumbotron

--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,45 @@
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-/* Containers */
+.alert-container .col-12 {
+  padding-left: 0;
+  padding-right: 0;
+}
 
-.alert-container {}
+.site-wide-alert {
+  color: #544600;
+  background-color: #eec802;
+  border-color: #eec802;
+  padding: 5px 15px;
+  margin-bottom: 0;
+  border: 1px solid transparent;
+  border-radius: 0;
+}
 
 .callout-container {
-    height: 100vh;
+  height: 100vh;
 
-    background: url('../images/whiskey-background.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  background: url("/images/whiskey-background.jpg") no-repeat bottom right fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
+  position: relative;
 }
 
-
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .quotes-container {}
@@ -47,7 +62,43 @@ body {
 .block-divider--short {
     width: 35px;
 }
+/*Navbar*/
 
+.navalert-container {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
+    padding-right: 0;
+    z-index: 1;
+
+}
+
+.navbar {
+
+    margin-bottom: 0;
+    border: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5)
+}
+
+.navbar .navbar-toggler {
+
+    border: 0;
+}
+
+.navbar-brand {
+   
+   font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+
+font-weight: bold;
+
+
+}
 /* Jumbotron */
 
 .jumbotron {
@@ -58,7 +109,7 @@ body {
     color: white;
     font-weight: bold;
     margin-bottom: 30px;
-    
+    color: white;
 }
 
 .jumbotron .lead {
@@ -81,9 +132,9 @@ body {
 }
 
 .btn--red {
-    color:white;
-    background-color:#f05f40;
-    border-color:#f05f40;
+    color: white;
+    background-color: #f05f40;
+    border-color: #f05f40;
 }
 
 .btn--red:hover,
